--- a/gui/clima.ui
+++ b/gui/clima.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>773</width>
-    <height>590</height>
+    <width>929</width>
+    <height>761</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>100</y>
+     <x>270</x>
+     <y>130</y>
      <width>341</width>
      <height>41</height>
     </rect>
@@ -35,8 +35,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>210</y>
+     <x>210</x>
+     <y>230</y>
      <width>481</width>
      <height>61</height>
     </rect>
@@ -51,8 +51,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>310</y>
+     <x>210</x>
+     <y>320</y>
      <width>481</width>
      <height>61</height>
     </rect>
@@ -62,6 +62,41 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>390</y>
+     <width>411</width>
+     <height>421</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../imagenes/kisspng-t-shirt-cloud-weather-clip-art-vector-cloudy-weather-forecast-icon-material-5a8634a8809866.2087930915187447445267.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>580</y>
+     <width>211</width>
+     <height>171</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../imagenes/logo_u.png</pixmap>
    </property>
   </widget>
  </widget>
